syntax = "proto3";

package auth_v1;

option go_package = "github.com/Insid1/go-auth-user/services/user/auth_v1;auth_v1";

service AuthV1 {
  // Register registers a new user.
  rpc Register (RegisterRequest) returns (RegisterResponse);
  // Login logs in a user and returns an auth token.
  rpc Login (LoginRequest) returns (LoginResponse);
  // IsAdmin checks whether a user is an admin.
  rpc Logout (LogoutRequest) returns (LogoutResponse);
}
message RegisterRequest {
  string email = 1; // Email of the user to register.
  string password = 2; // Password of the user to register.
}

message RegisterResponse {
  string user_id = 1; // User ID of the registered user.
}

message LoginRequest {
  string email = 1; // Email of the user to login.
  string password = 2; // Password of the user to login.
  int32 app_id = 3; // ID of the app to login to.
}

message LoginResponse {
  string auth_token = 1; // Auth token of the logged in user.
  string refresh_token = 2; // Refresh token of the logged in user.
}

message LogoutRequest {
  string token = 1; // Auth token of the user to logout.
}

message LogoutResponse {
  bool success = 1; // Indicates whether the logout was successful.
}